# bachelor-thesis

./: README.md  gliederung.txt  matplotlibrc
code/: .ycm_extra_conf.py  clusterpack.sh
code/ising1d/: Makefile  ising1d.cpp  ising1d.h  main.cpp
code/jobs/factorization/: job.sh  long-job.sh  makenumbers.py  numbers.txt  run-long.py  run-test.py  run.py  test-job.sh
code/jobs/kbguess/: job1.sh  job2.sh  job3.sh  job4.sh  run-test.py  run.py  run1.py  run2.py  run3.py  run4.py  test-job.sh
code/jobs/parallelization/: job.sh  run.py
code/jobs/runtime/: job.sh  long-job.sh  numbers.txt  run.py  test-job.sh
code/jobs/runtime2/: job.sh  makenumbers.py  numbers.txt  run-long.py  run-test.py  run.py  test-job.sh
code/jobs/semiprime/: job.sh  numbers.txt  run-test.py  run.py  test-job.sh
code/primefac/: CMakeLists.txt  Doxyfile.in  Makefile  bitset.cpp  bitset.hpp  config.hpp  guess.cpp  guess.hpp  main.cpp  main_factorize.cpp  main_mt.cpp  main_onestep.cpp  main_primefac.cpp  main_primelist.cpp  main_prngbench.cpp  main_randomprime.cpp  main_semiprime.cpp  primefac.cpp  primefac.hpp  primefac_mt.cpp  primelist.cpp  prngbench.cpp  ram-primes.sh  seed.cpp  seed.hpp  semiprime.cpp  semiprime_mt.cpp  sieve.cpp  sieve.hpp  threading.cpp  threading.hpp  workerthread.hpp
code/primefac/problems/factorization/: analyse.py  run.py
code/primefac/problems/kb-guess/: analyse.py  run.py
code/primefac/problems/runtime/: run.py
data/semiprime-kb-guess/fine/: analyse.py  merge.py  run.py
data/semiprime-kb-guess/fine/data/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
data/semiprime-kb-guess/fine/run1/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
data/semiprime-kb-guess/fine/run2/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
data/semiprime-kb-guess/rough/: run.py
data/semiprime-kb-guess/rough/data/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
notes/: buildtex.sh  cleantex.sh  header.tex
notes/ising1d/: Makefile  ising1d.tex  plot_few.py  plot_many.py  theory.py
thesis/: Makefile  buildtex.sh  literature.bib  matplotlibrc  talk.tex  thesis.tex
thesis/data/backup2/factorization/: job.sh  run.py
thesis/data/backup2/kbguess/: analyse.py  job1.sh  job2.sh  job3.sh  job4.sh  run4.py
thesis/data/backup2/parallelization/: job.sh  numbers.txt  run.py
thesis/data/backup2/prngbench/: prngbench.sh
thesis/data/backup2/runtime/: results.txt  runtime.o204766
thesis/data/backup2/runtime2/: analyse.py  job.sh  makenumbers.py  numbers.txt  run.py
thesis/data/backup2/semiprime/: job.sh  run.py  semiprime.o204768
thesis/data/factorization/: analyse.py  numbers.txt  results.txt
thesis/data/kbguess/: concatenate.py
thesis/data/kbguess/data/: 0.txt  (+15 more)
thesis/data/kbguess2/: concatenate.py
thesis/data/parallelization/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  numbers.txt
thesis/data/runtime/: analyse.py  numbers.txt  results.txt  runtime.o218509
thesis/data/runtime-sieve/: data.txt  runtime.py
thesis/data/runtime-theo/: data.txt  runtime.py
thesis/data/runtime2/: analyse.py  numbers.txt  results.txt
thesis/fig/: bits-reverse.odg  bits-slide.odg  bits-swap.odg  bits-template.odg
thesis/header/: alg_vlines.tex  header-talk.tex  header.tex  matplotlib.tex
thesis/plot/factorization/: plot.py
thesis/plot/kbguess/: plot.py
thesis/plot/parallelization/: plot.py
thesis/plot/runtime/: plot.py
thesis/plot/runtime-sieve/: plot.py
thesis/plot/runtime-theo/: comparison.py  runtime.py
thesis/plot/runtime2/: plot.py
thesis/pseudocode/: anneal-beamer.tex  anneal.tex  factorize-beamer.tex  factorize.tex  metropolis-beamer.tex  metropolis.tex  primefac.tex
thesis/sections/: abstract.tex  acknowledgement.tex  algorithm.tex  back.tex  conclusion.tex  factorization.tex  front.tex  introduction.tex  results.tex  titlepage.tex
thesis/slides/: algorithm.tex  back.tex  conclusion.tex  front.tex  introduction.tex  results.tex
(+1586 files in other folders)
